--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,6 @@
 @import 'tailwindcss/utilities';
 
 body {
-    background-color: #f87171;
+    background: linear-gradient(#dc2626, rgba(220,38,38,0.6));
+    color: white;
 }
